--- a/codes/11_training_deep_neural_networks.ipynb
+++ b/codes/11_training_deep_neural_networks.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.src.layers.core.dense.Dense at 0x169f938e0>"
+       "<keras.src.layers.core.dense.Dense at 0x17f23c310>"
       ]
      },
      "execution_count": 3,
@@ -701,6 +701,127 @@
    "metadata": {},
    "source": [
     "## 11.4 규제를 사용해 과대적합 피하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.4.1 l1과 l2 규제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = keras.layers.Dense(100, activation = 'elu', \n",
+    "                           kernel_initializer='he_normal', \n",
+    "                           kernel_regularizer=keras.regularizers.l2(0.01))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "RegularizedDense = partial(keras.layers.Dense,\n",
+    "                           activation = 'elu',\n",
+    "                           kernel_initializer = 'he_normal',\n",
+    "                           kernel_regularizer = keras.regularizers.l2(0.01))\n",
+    "\n",
+    "\n",
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape = [28, 28]),\n",
+    "    RegularizedDense(300),\n",
+    "    RegularizedDense(100),\n",
+    "    RegularizedDense(10, activation='softmax', kernel_initializer='glorot_uniform')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.4.2 드롭아웃"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Flatten(input_shape = [28, 28]),\n",
+    "    keras.layers.Dropout(rate = 0.2),\n",
+    "    keras.layers.Dense(300, activation='elu', kernel_initializer='he_normal'),\n",
+    "    keras.layers.Dropout(rate = 0.2),\n",
+    "    keras.layers.Dense(100, activation='elu', kernel_initializer='he_normal'),\n",
+    "    keras.layers.Dropout(rate = 0.2),\n",
+    "    keras.layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.4.3 몬테 카를로 드롭아웃"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_probas = np.stack([model(X_test_scaled, training=True)\n",
+    "                     for sample in range(100)])\n",
+    "y_proba = y_probas.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MCDropout(keras.layers.Dropout):\n",
+    "    def call(self, inputs):\n",
+    "        return super().call(inputs, training=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.4.4 맥스-노름 규제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.5 요약 및 실용적인 가이드라인"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.6 연습문제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8"
    ]
   },
   {
