--- a/codes/14_deep_computer_vision_with_cnns.ipynb
+++ b/codes/14_deep_computer_vision_with_cnns.ipynb
@@ -287,6 +287,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.5 CNN 구조"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-11 20:30:33.532646: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-10-11 20:30:33.532741: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-10-11 20:30:33.532750: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-10-11 20:30:33.533319: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:303] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-10-11 20:30:33.533747: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:269] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "DefaultConv2D = partial(tf.keras.layers.Conv2D, kernel_size = 3, padding = 'same', activation = 'relu', kernel_initializer = 'he_normal')\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    DefaultConv2D(filters = 64, kernel_size = 7, input_shape = [28, 28, 1]),\n",
+    "    tf.keras.layers.MaxPool2D(),\n",
+    "    DefaultConv2D(filters=128),\n",
+    "    DefaultConv2D(filters=128),\n",
+    "    tf.keras.layers.MaxPool2D(),\n",
+    "    DefaultConv2D(filters=256),\n",
+    "    DefaultConv2D(filters=256),\n",
+    "    tf.keras.layers.MaxPool2D(),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(units = 128, activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.Dropout(0.5),\n",
+    "    tf.keras.layers.Dense(units = 64, activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.Dropout(0.5),   \n",
+    "    tf.keras.layers.Dense(units=10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
