--- a/codes/14_deep_computer_vision_with_cnns.ipynb
+++ b/codes/14_deep_computer_vision_with_cnns.ipynb
@@ -295,18 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-11 20:30:33.532646: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
-      "2023-10-11 20:30:33.532741: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
-      "2023-10-11 20:30:33.532750: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
-      "2023-10-11 20:30:33.533319: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:303] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2023-10-11 20:30:33.533747: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:269] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "2023-10-12 23:51:25.853292: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-10-12 23:51:25.853437: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-10-12 23:51:25.853447: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-10-12 23:51:25.853817: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:303] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-10-12 23:51:25.854376: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:269] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -331,6 +331,448 @@
     "    tf.keras.layers.Dropout(0.5),   \n",
     "    tf.keras.layers.Dense(units=10, activation='softmax')\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.6 케라스로 ResNet-34 CNN 구현하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DefaultConv2D = partial(tf.keras.layers.Conv2D, kernel_size = 3, strides=1, padding='same', kernel_initializer = 'he_normal', use_bias=False)\n",
+    "\n",
+    "class ResidualUnit(tf.keras.layers.Layer):\n",
+    "    def __init__(self, filters, strides = 1, activation = 'relu', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.activation = tf.keras.activations.get(activation)\n",
+    "\n",
+    "        self.main_layers = [\n",
+    "            DefaultConv2D(filters, strides=strides),\n",
+    "            tf.keras.layers.BatchNormalization(),\n",
+    "            self.activation,\n",
+    "            DefaultConv2D(filters),\n",
+    "            tf.keras.layers.BatchNormalization()\n",
+    "        ]\n",
+    "\n",
+    "        self.skip_layers = []\n",
+    "        if strides > 1:\n",
+    "            self.skip_layers = [\n",
+    "                DefaultConv2D(filters, kernel_size=1, strides=strides),\n",
+    "                tf.keras.layers.BatchNormalization()\n",
+    "            ]\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = inputs\n",
+    "        for layer in self.main_layers:\n",
+    "            Z = layer(Z)\n",
+    "        \n",
+    "        skip_Z = inputs\n",
+    "        for layer in self.skip_layers:\n",
+    "            skip_Z = layer(skip_Z)\n",
+    "\n",
+    "        return self.activation(Z + skip_Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    DefaultConv2D(64, kernel_size=7, strides=2, input_shape=[224, 224, 3]),\n",
+    "    tf.keras.layers.BatchNormalization(),\n",
+    "    tf.keras.layers.Activation('relu'),\n",
+    "    tf.keras.layers.MaxPool2D(pool_size=3, strides=2, padding='same')\n",
+    "])\n",
+    "\n",
+    "prev_filters = 64\n",
+    "for filters in [64] * 3 + [128] * 4 + [256] * 6 + [512] * 3:\n",
+    "    strides = 1 if filters == prev_filters else 2\n",
+    "    model.add(ResidualUnit(filters, strides=strides))\n",
+    "    prev_filters = filters\n",
+    "\n",
+    "model.add(tf.keras.layers.GlobalAvgPool2D())\n",
+    "model.add(tf.keras.layers.Flatten())\n",
+    "model.add(tf.keras.layers.Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.7 케라스의 사전 훈련 모델 사용하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "102967424/102967424 [==============================] - 18s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ssl\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
+    "\n",
+    "model = tf.keras.applications.resnet50.ResNet50(weights='imagenet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_sample_images\n",
+    "\n",
+    "images = load_sample_images()['images']\n",
+    "images_resized = tf.keras.layers.Resizing(height=224, width=224, crop_to_aspect_ratio=True)(images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tf.keras.applications.resnet50.preprocess_input(images_resized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 92ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1000)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_proba = model.predict(inputs)\n",
+    "Y_proba.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이미지 #0\n",
+      "  n03877845 - palace       54.69%\n",
+      "  n03781244 - monastery    24.71%\n",
+      "  n02825657 - bell_cote    18.55%\n",
+      "이미지 #1\n",
+      "  n04522168 - vase         32.67%\n",
+      "  n11939491 - daisy        17.82%\n",
+      "  n03530642 - honeycomb    12.04%\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_K = tf.keras.applications.resnet50.decode_predictions(Y_proba, top=3)\n",
+    "for image_index in range(len(images)):\n",
+    "    print(f\"이미지 #{image_index}\")\n",
+    "    for class_id, name, y_proba in top_K[image_index]:\n",
+    "        print(f\"  {class_id} - {name:12s} {y_proba:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.8 사전 훈련된 모델을 사용한 전이 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 00:03:48.863129: W tensorflow/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDownloading and preparing dataset 218.21 MiB (download: 218.21 MiB, generated: 221.83 MiB, total: 440.05 MiB) to /Users/oneash/tensorflow_datasets/tf_flowers/3.0.1...\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fca4c28e194f4b139d6265e23f1a03c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dl Completed...:   0%|          | 0/5 [00:00<?, ? file/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDataset tf_flowers downloaded and prepared to /Users/oneash/tensorflow_datasets/tf_flowers/3.0.1. Subsequent calls will reuse this data.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
+    "dataset, info = tfds.load(\"tf_flowers\", as_supervised=True, with_info=True)\n",
+    "dataset_size = info.splits[\"train\"].num_examples\n",
+    "class_names = info.features[\"label\"].names\n",
+    "n_classes = info.features[\"label\"].num_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set_raw, valid_set_raw, train_set_raw = tfds.load(\n",
+    "    'tf_flowers',\n",
+    "    split=['train[:10%]', 'train[10%:25%]', 'train[25%:]'],\n",
+    "    as_supervised=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "preprocess = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Resizing(height=224, width=224, crop_to_aspect_ratio=True),\n",
+    "    tf.keras.layers.Lambda(tf.keras.applications.xception.preprocess_input)\n",
+    "])\n",
+    "train_set = train_set_raw.map(lambda X, y: (preprocess(X), y))\n",
+    "train_set = train_set.shuffle(1000, seed=42).batch(batch_size).prefetch(1)\n",
+    "valid_set = valid_set_raw.map(lambda X, y: (preprocess(X), y)).batch(batch_size)\n",
+    "test_set = test_set_raw.map(lambda X, y: (preprocess(X), y)).batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_augmentation = tf.keras.Sequential([\n",
+    "    tf.keras.layers.RandomFlip(mode=\"horizontal\", seed=42),\n",
+    "    tf.keras.layers.RandomRotation(factor=0.05, seed=42),\n",
+    "    tf.keras.layers.RandomContrast(factor=0.2, seed=42)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/xception/xception_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "83683744/83683744 [==============================] - 18s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_model = tf.keras.applications.xception.Xception(weights='imagenet', include_top=False)\n",
+    "avg = tf.keras.layers.GlobalAveragePooling2D()(base_model.output)\n",
+    "output = tf.keras.layers.Dense(n_classes, activation='softmax')(avg)\n",
+    "model = tf.keras.Model(inputs=base_model.input, outputs = output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 00:24:47.269708: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86/86 [==============================] - ETA: 0s - loss: 0.2586 - accuracy: 0.9197"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 00:25:37.622743: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86/86 [==============================] - 63s 714ms/step - loss: 0.2586 - accuracy: 0.9197 - val_loss: 0.4829 - val_accuracy: 0.8766\n",
+      "Epoch 2/3\n",
+      "86/86 [==============================] - 67s 761ms/step - loss: 0.1665 - accuracy: 0.9484 - val_loss: 0.6745 - val_accuracy: 0.8475\n",
+      "Epoch 3/3\n",
+      "86/86 [==============================] - 68s 778ms/step - loss: 0.1174 - accuracy: 0.9589 - val_loss: 0.4972 - val_accuracy: 0.8730\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.1, momentum=0.9)\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer,\n",
+    "              metrics=[\"accuracy\"])\n",
+    "history = model.fit(train_set, validation_data=valid_set, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in base_model.layers[56:]:\n",
+    "    layer.trainable = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
+      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 00:28:07.561039: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 7/86 [=>............................] - ETA: 1:48 - loss: 0.4581 - accuracy: 0.8393"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.01, momentum=0.9)\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer,\n",
+    "              metrics=[\"accuracy\"])\n",
+    "history = model.fit(train_set, validation_data=valid_set, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.9 분류와 위치 추정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_model = tf.keras.applications.xception.Xception(weights = 'imagenet', include_top=False)\n",
+    "avg = tf.keras.layers.GlobalAveragePooling2D()(base_model.output)\n",
+    "class_output = tf.keras.layers.Dense(n_classes, activation=\"softmax\")(avg)\n",
+    "loc_output = tf.keras.layers.Dense(4)(avg)\n",
+    "model = tf.keras.Model(inputs=base_model.input, outputs = [class_output, loc_output])\n",
+    "model.compile(loss=['sparse_categorical_crossentropy', 'mse'],\n",
+    "              loss_weights = [0.8, 0.2],\n",
+    "              optimizer = optimizer, metrics = ['accuracy'])"
    ]
   },
   {
