--- a/codes/14_deep_computer_vision_with_cnns.ipynb
+++ b/codes/14_deep_computer_vision_with_cnns.ipynb
@@ -844,6 +844,175 @@
    "source": [
     "## 14.12 시맨틱 분할"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14.13 연습문제"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnist = tf.keras.datasets.mnist.load_data()\n",
+    "(X_train_full, y_train_full), (X_test, y_test) = mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_full = X_train_full / 255.\n",
+    "X_test = X_test / 255\n",
+    "X_train, X_valid = X_train_full[:-5000], X_train_full[-5000:]\n",
+    "y_train, y_valid = y_train_full[:-5000], y_train_full[-5000:]\n",
+    "\n",
+    "X_train = X_train[..., np.newaxis]\n",
+    "X_valid = X_valid[..., np.newaxis]\n",
+    "X_test = X_test[..., np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55000, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.backend.clear_session()\n",
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 20:01:57.567344: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1\n",
+      "2023-10-13 20:01:57.567579: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 8.00 GB\n",
+      "2023-10-13 20:01:57.567601: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 2.67 GB\n",
+      "2023-10-13 20:01:57.568387: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:303] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-10-13 20:01:57.568952: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:269] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 20:01:59.142360: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - ETA: 0s - loss: 0.3340 - accuracy: 0.9219"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 20:02:33.174278: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 36s 19ms/step - loss: 0.3340 - accuracy: 0.9219 - val_loss: 0.1037 - val_accuracy: 0.9792\n",
+      "Epoch 2/10\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 0.2585 - accuracy: 0.9589 - val_loss: 0.1188 - val_accuracy: 0.9842\n",
+      "Epoch 3/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 0.3716 - accuracy: 0.9622 - val_loss: 0.2150 - val_accuracy: 0.9856\n",
+      "Epoch 4/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 0.6088 - accuracy: 0.9663 - val_loss: 0.2892 - val_accuracy: 0.9868\n",
+      "Epoch 5/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 0.7779 - accuracy: 0.9696 - val_loss: 0.4686 - val_accuracy: 0.9884\n",
+      "Epoch 6/10\n",
+      "1719/1719 [==============================] - 31s 18ms/step - loss: 1.2666 - accuracy: 0.9702 - val_loss: 0.9036 - val_accuracy: 0.9838\n",
+      "Epoch 7/10\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 1.7579 - accuracy: 0.9710 - val_loss: 1.0701 - val_accuracy: 0.9868\n",
+      "Epoch 8/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 2.2522 - accuracy: 0.9734 - val_loss: 1.3000 - val_accuracy: 0.9882\n",
+      "Epoch 9/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 3.0879 - accuracy: 0.9729 - val_loss: 2.2381 - val_accuracy: 0.9864\n",
+      "Epoch 10/10\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 3.8014 - accuracy: 0.9751 - val_loss: 2.3304 - val_accuracy: 0.9866\n",
+      "313/313 [==============================] - 2s 8ms/step - loss: 2.2121 - accuracy: 0.9853\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2.2121291160583496, 0.9853000640869141]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(32, kernel_size=3, padding='same', activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.Conv2D(64, kernel_size=3, padding='same', activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.MaxPool2D(),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dropout(0.25),\n",
+    "    tf.keras.layers.Dense(128, activation='relu', kernel_initializer='he_normal'),\n",
+    "    tf.keras.layers.Dropout(0.5),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer='nadam', metrics=['accuracy'])\n",
+    "model.fit(X_train, y_train, epochs=10, validation_data=(X_valid, y_valid))\n",
+    "model.evaluate(X_test, y_test)"
+   ]
   }
  ],
  "metadata": {
